--- a/PulseLTD_Exercise/Views/Shared/_Layout.cshtml
+++ b/PulseLTD_Exercise/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("PhotoAlbums", "Create", "PhotoAlbums")</li>
+                    <li>@Html.ActionLink("PhotoAlbums", "Index", "PhotoAlbums")</li>
                 </ul>
             </div>
         </div>
