--- a/PulseLTD_Exercise/Views/PhotoAlbums/Index.cshtml
+++ b/PulseLTD_Exercise/Views/PhotoAlbums/Index.cshtml
@@ -60,8 +60,8 @@
                     </p>
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ImageId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ImageId }) |
+                    @*@Html.ActionLink("Edit", "Edit", new { id = item.ImageId }) |*@
+                    @*@Html.ActionLink("Details", "Details", new { id = item.ImageId })*@
                     @Html.ActionLink("Delete", "Delete", new { id = item.ImageId })
                 </td>
             </tr>
